# MobileRT

./: .bettercodehub.yml  .codedocs  .dockerignore  .gitattributes  .gitignore  .gitmodules  .jscpd.json  .project  .simplecov  .travis.yml  .travis_disabled.yml  AGENTS.md  Gemfile  LICENSE  Makefile  README.md  build-wrapper-linux-x86-64  build.gradle  codacy-analysis.yml  codecov.yml  get_code_cov.sh  gradle.properties  gradlew  hq  lgtm.yml  renovate.json  settings.gradle  sonar-project.properties  wercker.yml
app/: .project  CMakeLists.txt  CMakeLists_helper.cmake  Cargo.toml  MobileRT.jks  build.gradle  conanfile.txt  lint.xml  proguard-rules.pro
app/.cargo/: config.toml
app/Components/: CMakeLists.txt
app/Components/Cameras/: Orthographic.cpp  Orthographic.hpp  Perspective.cpp  Perspective.hpp
app/Components/Lights/: AreaLight.cpp  AreaLight.hpp  PointLight.cpp  PointLight.hpp
app/Components/Loaders/: CameraFactory.cpp  CameraFactory.hpp  OBJLoader.cpp  OBJLoader.hpp  PerspectiveLoader.cpp  PerspectiveLoader.hpp
app/Components/ObjectLoaders/: OBJLoader.cpp  OBJLoader.hpp
app/Components/Samplers/: Constant.cpp  Constant.hpp  HaltonSeq.cpp  HaltonSeq.hpp  MersenneTwister.cpp  MersenneTwister.hpp  PCG.cpp  PCG.hpp  StaticHaltonSeq.cpp  StaticHaltonSeq.hpp  StaticMersenneTwister.cpp  StaticMersenneTwister.hpp  StaticPCG.cpp  StaticPCG.hpp  Stratified.cpp  Stratified.hpp
app/Components/Shaders/: DepthMap.cpp  DepthMap.hpp  DiffuseMaterial.cpp  DiffuseMaterial.hpp  NoShadows.cpp  NoShadows.hpp  PathTracer.cpp  PathTracer.hpp  Whitted.cpp  Whitted.hpp
app/MobileRT/: CMakeLists.txt  Camera.cpp  Camera.hpp  CameraLoader.cpp  CameraLoader.hpp  Config.hpp  Intersection.cpp  Intersection.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  ObjectLoader.cpp  ObjectLoader.hpp  Primitive.hpp  Ray.cpp  Ray.hpp  RayPacket.cpp  RayPacket.hpp  Renderer.cpp  Renderer.hpp  Sampler.cpp  Sampler.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Utils.cpp  Utils.hpp
app/MobileRT/Accelerators/: AABB.cpp  AABB.hpp  BVH.cpp  BVH.hpp  Naive.cpp  Naive.hpp  RegularGrid.cpp  RegularGrid.hpp
app/MobileRT/Shapes/: Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
app/MobileRT/Utils/: Constants.cpp  Constants.hpp  ErrorCode.cpp  ErrorCode.hpp  Utils.cpp  Utils.hpp
app/Scenes/: Scenes.cpp  Scenes.hpp
app/System_dependent/: CMakeLists.txt
app/System_dependent/Android_JNI/: Config.hpp  DrawView.cpp  DrawView.hpp  JNI_layer.cpp  JNI_layer.hpp  Utils_dependent.cpp  Utils_dependent.hpp
app/System_dependent/Linux/: C_wrapper.cpp  GTK_Interface.cpp  Utils_dependent.cpp  Utils_dependent.hpp  c_wrapper.cpp  c_wrapper.h
app/System_dependent/Linux/GTK/: GTK_Interface.cpp
app/System_dependent/Linux/QT/MobileRT/: MobileRT.pro  about.cpp  about.h  config.cpp  config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/System_dependent/Linux/QT/build-MobileRT-Desktop-Debug/: Makefile  MobileRT  moc_config.cpp  moc_mainwindow.cpp  ui_config.h  ui_mainwindow.h
app/System_dependent/Linux/QT/build-MobileRT-Desktop-Release/: Makefile  MobileRT  moc_about.cpp  moc_config.cpp  moc_mainwindow.cpp  ui_about.h  ui_mainwindow.h
app/System_dependent/Linux/Qt/MobileRT/: config.cpp  config.h  config.ui  main.cpp  mainwindow.cpp  mainwindow.ui
app/System_dependent/Linux/Qt/build-Debug/: ui_about.h
app/System_dependent/Linux/Qt/build-Release/: ui_config.h  ui_mainwindow.h
app/System_dependent/Native/: C_wrapper.cpp  C_wrapper.h  Utils_dependent.cpp  Utils_dependent.hpp
app/System_dependent/Native/Qt/MobileRT/: MobileRT.pro  about.cpp  about.h  about.ui  config.cpp  config.h  main.cpp  mainwindow.cpp  mainwindow.h
app/System_dependent/Native/Qt/build-Debug/: moc_about.cpp  moc_config.cpp  moc_mainwindow.cpp  ui_config.h  ui_mainwindow.h
app/System_dependent/Native/Qt/build-Release/: ui_mainwindow.h
app/Unit_Testing/: CMakeLists.txt  TestAABB.cpp  TestCameraLoader.cpp  TestIntersection.cpp  TestMain.cpp  TestOBJLoader.cpp  TestPlane.cpp  TestRay.cpp  TestTextureLoader.cpp  TestTriangle.cpp  TestUtils.cpp
app/Unit_Testing/engine/: AcceleratorTestEngine.cpp  CameraTestEngine.cpp  README.md  ShaderTestEngine.cpp  TextureTestEngine.cpp
app/my_library/: Cargo.toml
app/release/: app-release.apk
app/src/: lib.rs
app/src/androidTest/: AndroidManifest.xml
app/src/androidTest/java/puscas/mobilertapp/: AbstractTest.java  AcceleratorTest.java  Constants.java  ConstantsAndroid.java  ConstantsAndroidTests.java  DirectInteraction.java  FailuresTest.java  FileSystemTest.java  FlakyTests.java  InvokeMethodIgnoringErrors.java  MainActivityTest.java  MainRendererTest.java  Order.java  OrderRunner.java  PreviewTest.java  RayTracingTest.java  ShaderTest.java  UITest.java  UiTest.java  Utils.java  ViewActionButton.java  ViewActionNumberPicker.java  ViewActionWait.java  ViewTextTest.java  package-info.java
app/src/androidTest/resources/CornellBox/: CornellBox-Water.cam  CornellBox-Water.mtl
app/src/androidTest/resources/Shaders/: FragmentShader.glsl  FragmentShaderRaster.glsl  VertexShader.glsl  VertexShaderRaster.glsl
app/src/androidTest/resources/teapot/: teapot.cam  teapot.mtl
app/src/main/: AndroidManifest.xml
app/src/main/assets/Logging/: mylogging.properties
app/src/main/assets/Shaders/: FragmentShader.glsl  FragmentShaderRaster.glsl  VertexShader.glsl  VertexShaderRaster.glsl
app/src/main/assets/Utils/: cpuInfoDeviceSystemPath.txt  cpuInfoPath.txt
app/src/main/java/puscas/mobilertapp/: Accelerator.java  Config.java  ConfigGLAttribute.java  ConfigGlAttribute.java  ConfigRenderTask.java  ConfigResolution.java  ConfigResolutionView.java  ConfigSamples.java  (+21 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
app/web-server/: CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs
app/web-server/src/: lib.cpp  lib.rs  main.rs
app/web-server/static/: index.html  script.js
app/web-server/tests/: test_integration.rs
(+269 files in other folders)
